fix collapse row issue ion etudiant-mes-stage page

--- a/css/style.css
+++ b/css/style.css
@@ -353,3 +353,10 @@ color: white;
 .bt{
     margin: 0 !important;padding: 0 !important;
 }
+td.details-control {
+    background: url('https://www.datatables.net/examples/resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('https://www.datatables.net/examples/resources/details_close.png') no-repeat center center;
+}
